@startuml MER
title Modelo Entidad-Relación Actualizado

skinparam class {
    ArrowColor SteelBlue
    BorderColor SteelBlue
    BackgroundColor<<M>> Orchid
    BackgroundColor<<U>> LightGreen
    BackgroundColor<<D>> LightBlue
    BackgroundColor<<S>> Yellow
    BackgroundColor<<H>> Orange
    BackgroundColor<<A>> Pink
    BackgroundColor<<C>> Violet
    BackgroundColor<<E>> Tomato
    BackgroundColor<<T>> Cyan
    BackgroundColor<<CC>> Grey
}

entity Patient <<(M,orchid)>> {
  + id : int
  --
  - rut : varchar
  - name : varchar
  - apellido_paterno : varchar
  - apellido_materno : varchar
  - birth_date : date
  - gender : varchar
  - adress : varchar
}

entity User <<(U,lightgreen)>> {
  + id : int
  --
  - name : varchar
  - email : varchar
  - password : varchar
  - rol : enum
}

entity Diagnostic <<(D,lightblue)>> {
  + id : int
  --
  - description : text
  - date : date
}

entity Symptom <<(S,yellow)>> {
  + id : int
  --
  - name : varchar
  - description : text
}

entity "Record (Historial)" as Record <<(H,orange)>> {
  + id_historial : int
  --
  - tratamientos : text
  - fecha : date
}

entity Alergia <<(A,pink)>> {
  + id : int
  --
  - name : varchar
}

entity Cirugia <<(C,violet)>> {
  + id : int
  --
  - name : varchar
}

entity Enfermedad <<(E,tomato)>> {
  + id : int
  --
  - name : varchar
}

entity Appointment <<(T,cyan)>> {
  + id : int
  --
  - date : date
  - time : time
  - notes : text
  - status : varchar
}

entity "ClinicalCase (Caso Clínico)" as ClinicalCase <<(CC,grey)>> {
  + id : int
  --
  - title : varchar
  - description : text
  - steps : text
  - language : varchar
  - solution : text
}

' Relaciones
Patient "1" }--|| "0..*" Diagnostic
Patient "1" }--|| "0..*" Symptom
Patient "1" }--|| "0..*" Appointment
Patient "1" }--|| "0..*" Record

User "1" }--|| "0..*" Diagnostic
User "1" }--|| "0..*" Appointment
User "1" }--|| "0..*" ClinicalCase

Diagnostic "1" }--|| "0..*" Record
Diagnostic "1..*" *--* "1..*" Symptom

Record "1..*" *--* "1..*" Alergia
Record "1..*" *--* "1..*" Cirugia
Record "1..*" *--* "1..*" Enfermedad

@enduml
